--- a/index.html
+++ b/index.html
@@ -2,8 +2,26 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>MonChat</title>
+    
+    <meta name="description" content="MonChat is a decentralized, open-source chat project on the Monad blockchain. Chat in real time, where all messages are public and recorded on the blockchain.">
+    <meta name="author" content="0xGus">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mcmsq.vercel.app/">
+    <meta property="og:title" content="MonChat - Bate-papo na Blockchain Monad">
+    <meta property="og:description" content="Chat in real time on the Monad blockchain.">
+    <meta property="og:image" content="https://ipfs.io/ipfs/bafkreievdtfwyy5ixtyjt4aemzyevjeeza5yfwbifnnzbxueiommukwwfa">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mcmsq.vercel.app/">
+    <meta property="twitter:title" content="MonChat">
+    <meta property="twitter:description" content="Chat in real time on the Monad blockchain.">
+    <meta property="twitter:image" content="https://ipfs.io/ipfs/bafkreievdtfwyy5ixtyjt4aemzyevjeeza5yfwbifnnzbxueiommukwwfa">
+    <meta name="twitter:creator" content="@0xGustavo">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
