--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mcmsq.vercel.app/">
-    <meta property="og:title" content="MonChat - Bate-papo na Blockchain Monad">
+    <meta property="og:title" content="MonChat">
     <meta property="og:description" content="Chat in real time on the Monad blockchain.">
     <meta property="og:image" content="https://ipfs.io/ipfs/bafkreievdtfwyy5ixtyjt4aemzyevjeeza5yfwbifnnzbxueiommukwwfa">
 
